Profile plugin: Display Date of Birth TIP only when editing + correcting alignment of display Fixes #7345

--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -7477,3 +7477,6 @@ body.modal-open {
 	overflow: hidden;
 	-ms-overflow-style: none;
 }
+#users-profile-custom label {
+	display: inline;
+}
